# SOFTX-D-22-00404

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: example1.cpp  example2.cpp  example_c.c  range_example.cpp  range_zip_example.cpp
include/: cnpy++.h  cnpy++.hpp
include/cnpy++/: buffer.hpp  map_type.hpp  stride_iterator.hpp  tuple_util.hpp
src/: buffer.cpp  c_interface.c  cnpy++.cpp
